# Spangle.Net.Transport.SRT

./: .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  Spangle.Net.Transport.SRT.sln  Spangle.Net.Transport.SRT.sln.DotSettings  Spangle.Net.Transport.SRT.slnx  THIRD-PARTY-NOTICES.txt  global.json
.github/workflows/: build_test.yml  publish.yml
Spangle.Net.Transport.SRT/: Class1.cs  LibSRT.cs  Mapping.xml  SRTClient.cs  SRTException.cs  SRTExtensions.cs  SRTListener.cs  SRTListenerOptions.cs  SRTPipe.cs  SRTSessionEpollHandler.cs  SRTSessionEpollProxy.cs  Spangle.Net.Transport.SRT.csproj  ThrowHelper.cs
Spangle.Net.Transport.SRT.Tests/: SRTListenerTest.cs  Spangle.Net.Transport.SRT.Tests.csproj
interop/: Cargo.toml  build.rs  init.ps1  lib.rs  srt.rs  srt_ffi.rs
interop/dotnet/: LibSRT.g.cs
interop/src/: lib.rs  srt.rs  srt_ffi.rs
interop/tests/: binding_test.rs
