[package]
name = "srt-interop"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
csbindgen = "1.4.0"
libc = "0.2.140"

[build-dependencies]
bindgen = "0.64.0"
csbindgen = "1.4.0"
cmake = "0.1"

[dev-dependencies]
futures = "0.3"
tokio = {version="1.26.0", features=["macros", "rt"]}
