[package]
name = "srt-interop"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
csbindgen = "1.8"

[build-dependencies]
bindgen = "0.69.1"
csbindgen = "1.8"
cmake = "0.1"

[dev-dependencies]
futures = "*"
tokio = {version="1", features=["macros", "rt"]}
