[package]
name = "srt-interop"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
csbindgen = "1.9"

[build-dependencies]
# 0.7x is required for the newer libclang on CI runners: 0.69 panics on the
# _Complex _Float16 builtins that LLVM 18+ exposes
bindgen = "0.72"
csbindgen = "1.9"
cmake = "0.1"

[dev-dependencies]
futures = "*"
tokio = {version="1", features=["macros", "rt"]}
